fixed playlist video shirinking and overlapping in channel pages

--- a/src/content-script/main.css
+++ b/src/content-script/main.css
@@ -180,10 +180,12 @@ html[global_enable="true"][blur_video_thumbnails="true"] .video-thumbnail-img {
 /* Shrink thumbnails */
 html[global_enable="true"][shrink_video_thumbnails="true"] ytd-thumbnail,
 html[global_enable="true"][shrink_video_thumbnails="true"] ytd-playlist-thumbnail,
+html[global_enable="true"][shrink_video_thumbnails="true"] ytd-playlist-thumbnail,
+html[global_enable="true"][shrink_video_thumbnails="true"] *:has(> yt-collection-thumbnail-view-model),
 html[global_enable="true"][shrink_video_thumbnails="true"] ytd-channel-renderer #avatar-section,
 html[global_enable="true"][shrink_video_thumbnails="true"] ytd-movie-renderer .thumbnail-container {
-	max-width: 0 !important;
-    min-width: 240px;
+	max-width: 240px !important;
+    min-width: 210px;
 }
 
 
